Fixed the user pet relationship
Signed-off-by: DPatti88 <patricia.nilsson@iths.se>